style.css
/* ... */
form#user-profile-form #user_user_form_group_personal_info input {
    width: 300px;
}

form#user-profile-form #user_user_form_group_personal_info div.tabledrag-toggle-weight-wrapper {
    display: none;
}

form#user-profile-form div.link-field-title.link-field-column {
    width: 300px;
}

form#user-profile-form #field-website-values div.form-item-field-website-und-0-title label,
form#user-profile-form #field-website-values div.form-item-field-website-und-0-url label {
    width: 50px;
}

form#user-profile-form input#edit-field-website-und-add-more {
    width: 10em;
    display: block;
    margin: .5em auto;
}

form#user-profile-form div#field-other-information-add-more-wrapper div.form-item-field-other-information-und-0-value label {
    width: 230px;
}

form#user-profile-form div#edit-actions--2.form-actions.form-wrapper {
    text-align: center;
}

form#user-profile-form div#edit-actions--2.form-actions.form-wrapper input {
    margin: 0 10px;
}



/* Styling for Contact Pages */

form.contact-form {
    width: 80%;
    margin-right: auto;
    margin-left: auto;
}

form.contact-form label {
    display: block;
    float: left;
    margin-right: .5em;
    width: 12em;
    text-align: right;
}

form.contact-form label:after {
    content: ":";
}

form.contact-form input {
    width: 30em;
    padding-right: 5px;
    padding-left: 5px;
}

form.contact-form input.form-checkbox {
    width: 2em;
}

form.contact-form label.art-checkbox {
    margin-left: 2.5em;
    width: 15em;
}

form.contact-form label.art-checkbox:after {
    content: "";
}

form.contact-form label.art-checkbox:before {
    width: 30em;
}

form.contact-form textarea {
    width: 30.7em;
    padding-right: 5px;
    padding-left: 5px;
}

form.contact-form div.grippie {
    width: 30.7em;
    margin-left: 12.5em;
}

form.contact-form input.form-submit.art-button {
    width: 12em;
}



/* Styling for Social Widgets */

div#block-widgets-s-socialmedia-share-default div.widgets-element-horizontal {
    margin-right: .6%;
}

#widgets-element-socialmedia_socialmedia-twitter-share-button {
    margin-left: 1%;
}



/* Styling of Cue Sheets Page */

#node-2188 table {
    margin-bottom: 1.5em;
}

#node-2188 table td {
    font-size: .75em;
}

#node-2188 h2 {
    font-weight: bold;
    font-size: 1.4em;
    text-align: center;
}

#node-2188 ol {
    display: block;
    margin-left: 3em;
    margin-right: 3em;
}

#node-2188 ol li {
    list-style-position: outside;
}

#cue-sheet-contributors {
    text-align: center;
}

#cue-sheet-contributors ul {
    margin-left: auto;
    margin-right: auto;
    width: 80%;
}

#cue-sheet-contributors ul li {
    display: inline-block;
}

#cue-sheet-contributors ul li:after {
    content: ",\00a0\00a";
}

#cue-sheet-contributors ul li:last-of-type:after {
    content: "";
}



/* Style Blocks for Banner 2 Region */

div.region.region-banner2 div.block {
    border: 2px solid #ae133e;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    background: #FFF url(images/notice-arrow.png) no-repeat;
    margin: 5px auto;
    -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, .5);
    -moz-box-shadow: 0 2px 8px rgba(0, 0, 0, .5);
    box-shadow: 0 2px 8px rgba(0, 0, 0, .5);
    min-height: 47px;
    position: relative;
    overflow: hidden;
    width: 98%;
    background-size: auto;
}

div.region.region-banner2 div.block .content {
    display: block;
    flex-flow: row wrap;
    align-items: center;
    min-height: 45px;
    padding: 0 0.5em;
}

@media screen and (min-width: 678px) {
    div.region.region-banner2 div.block {
        background-size: 184px 100%;
    }

    div.region.region-banner2 div.block .content,
    div.region.region-banner2 div.block .view-content {
        display: flex;
    }

    div.region.region-banner2 div.block .view-content {
        display: inline-flex;
        align-items: center;
    }
}

div.region.region-banner2 h3 {
    display: inline-block;
    font-size: 1.5em;
    color: white;
    text-align: center;
    vertical-align: middle;
    line-height: 47px;
    width: 184px;
    flex: 0 0 184px;
}

.notice-block,
div.region.region-banner2 div.views-row {
    display: inline-block;
    vertical-align: middle;
    padding: 5px;
    font-size: 1.20em;
    overflow: hidden;
    flex: 1;
}

/*.node-type-membership-product-display div.region.region-banner2 div.views-row,
.page-checkout div.region.region-banner2 div.views-row,
.page-calendar div.region.region-banner2 div.views-row {
    display: inline-block;
    top: 2px;
    left: 190px;
    font-size: 1.20em;
    font-variant: normal;
    overflow: hidden;
}*/

div.region.region-banner2 h3 a {
    color: white;
    text-decoration: none;
}

div.region.region-banner2 a {
    color: red;
    text-decoration: none;
}



/* Styling for MHCC Starting Locations */

div.node-starting-location.view-mode-full div.field {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

div.node-starting-location.view-mode-full div.field-label-inline div.field-label {
    margin-right: 1em;
    margin-top: 0em;
}

div.node-starting-location.view-mode-full div.location {
    margin-top: .35em;
}



/* Styling for Attached File Tables */

img.file-icon {
    margin: 0;
    border-style: none;
}

div.field-name-field-attached-files table {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

div.field-name-field-attached-files table td {
    text-align: center;
}



/* Styling for Articles and News */

div.node-article div.user-picture {
    float: left;
}

div.node-news div.art-postheadericons.art-metadata-icons,
div.node-article div.art-postheadericons.art-metadata-icons {
    margin-bottom: 1em;
}



/* Styling for MHCC Store and Checkout */

.node-membership-product-display div.commerce-product-title-label {
    display: none;
}

.node-membership-product-display div.commerce-product-title {
    float: left;
    margin-right: 1em;
}
/* ... */

